# properties

./: Makefile.am  Makefile.in  config.status  configure  configure.ac  libproperties.h
examples/: config-objectity.properties  httpengine-response.properties  testproperties.c
src/: Makefile  properties.c  properties_parse.c  propertiesreflect.c
